--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -94,6 +94,30 @@ a {
     font-size: 34px;
 }
 
+/* ------------ Upload Resume ------------ */
+.upload-resume__label {
+    position: relative;
+}
+
+.upload-resume__button {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 12px;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: white;
+    border-radius: 8px;
+    background: linear-gradient(268deg, #ED2E38 22%, #3C324C 86%);
+    cursor: pointer;
+}
+
+.upload-resume__button-icon {
+    width: 28px;
+}
+/* ------------ /end Upload Resume ------------ */
+
+
 /* ------------ Spinner ------------ */
 .spinner {
     position: fixed;
@@ -187,6 +211,10 @@ a {
     text-decoration: none;
     font-weight: 300;
 }
+
+.iconed-link__icon {
+    width: 30px;
+}
 /* ------------ /end Carousel ------------ */
 
 
@@ -220,7 +248,7 @@ a {
     color: white;
 }
 
-.welcome__logo {
+.welcome__logo-image {
     margin-bottom: 68px;
 }
 
@@ -228,14 +256,35 @@ a {
     font-size: 34px;
 }
 
+.welcome__desc-divider {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+}
+
 .welcome__desc {
     max-width: 388px;
-    padding: 12px 16px 16px 40px;
+    padding: 10px 16px 12px 40px;
     margin-left: -40px;
+    margin-bottom: 0;
     font-size: 24px;
     line-height: 1.3;
     border-radius: 0px 8px 8px 0;
     background: linear-gradient(268deg, #ED2E38, #5d26352b);
+}
+
+.welcome__upload-resume .upload-resume__button {
+    gap: 12px;
+    padding: 12px 24px;
+    font-size: 34px;
+    font-weight: 300;
+    background: linear-gradient(268.94deg, rgba(237, 46, 56, 0.5) 22%, rgba(60, 50, 76, 0.5) 86%);
+    box-shadow: 2px 2px 7px 0px #000000;
+}
+
+.welcome__upload-resume .upload-resume__button-icon {
+    width: 44px;
 }
 
 /* Vacancies */
@@ -326,31 +375,10 @@ a {
     font-weight: 300;
 }
 
-.upload-resume {
+.tab-content__upload-resume {
     display: flex;
     justify-content: flex-end;
     padding-top: 12px;
-}
-
-.upload-resume__label {
-    position: relative;
-}
-
-.upload-resume__btn {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    padding: 8px 12px;
-    font-size: 15px;
-    text-transform: uppercase;
-    color: white;
-    border-radius: 8px;
-    background: linear-gradient(268deg, #ED2E38 22%, #3C324C 86%);
-    cursor: pointer;
-}
-
-.upload-resume__icon {
-    width: 28px;
 }
 
 /* Values */
@@ -366,27 +394,29 @@ a {
 
 .values-list {
     display: flex;
-    gap: 84px;
+    gap: 40px;
 }
 
 .values-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     gap: 20px;
-    width: 25%;
-    padding: 40px;
+    width: 20%;
+    padding: 32px 24px;
     box-shadow: 5px 5px 20px 0px #86868640, 5px 5px 10px 0px #ED2E3833 inset;
     border-radius: 8px;
 }
 
-.values-card__image {
-    height: 90px;
+.values-card__title {
+    font-size: 18px;
+    margin: 0;
 }
 
-.values-card__title {
-    font-size: 22px;
+.values-card__image {
+    width: 110px;
 }
 
 /* Companies */
