--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -222,29 +222,15 @@ a {
 /* Banner */
 .welcome {
     position: relative;
-}
-
-.welcome__image {
-    width: 100%;
-    height: 460px;
-    object-fit: cover;
+    background-image: url(/img/home/banner.png);
+    background-position: center;
+    background-size: cover;
 }
 
 .welcome__inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    padding-top: 80px;
-}
-
-.welcome__inner-content {
     flex-direction: column;
-    align-items: flex-start;
-    margin: 0 auto;
-    width: 100%;
+    padding-top: 80px;
+    padding-bottom: 120px;
     color: white;
 }
 
