--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -195,6 +195,7 @@ a {
 }
 
 .footer__inner {
+    justify-content: space-between;
     padding-top: 32px;
     padding-bottom: 32px;
 }
@@ -215,6 +216,15 @@ a {
 .iconed-link__icon {
     width: 30px;
 }
+
+.scroll-top {
+    background-color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 50%;
+    padding: 4px;
+    transition: 0.3s;
+}
+
 /* ------------ /end Carousel ------------ */
 
 
@@ -242,13 +252,6 @@ a {
     font-size: 34px;
 }
 
-.welcome__desc-divider {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
-}
-
 .welcome__desc {
     max-width: 388px;
     padding: 10px 16px 12px 40px;
@@ -258,19 +261,6 @@ a {
     line-height: 1.3;
     border-radius: 0px 8px 8px 0;
     background: linear-gradient(268deg, #ED2E38, #5d26352b);
-}
-
-.welcome__upload-resume .upload-resume__button {
-    gap: 12px;
-    padding: 12px 24px;
-    font-size: 34px;
-    font-weight: 300;
-    background: linear-gradient(268.94deg, rgba(237, 46, 56, 0.5) 22%, rgba(60, 50, 76, 0.5) 86%);
-    box-shadow: 2px 2px 7px 0px #000000;
-}
-
-.welcome__upload-resume .upload-resume__button-icon {
-    width: 44px;
 }
 
 /* Vacancies */
@@ -382,6 +372,15 @@ a {
 
 .accordion-body__upload-resume {
     padding: 12px 0;
+}
+
+/* Vacancies applicants */
+.vacancies__applicants {
+    margin-top: 40px;
+}
+
+.vacancies__applicants-text {
+    margin-bottom: 12px;
 }
 
 /* Values */
