--- a/resources/css/media.css
+++ b/resources/css/media.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 1500px) {
+
     .vacancies-tab>.nav,
     .vacancies-tab>.tab-content {
         max-height: 72vh;
@@ -29,9 +30,12 @@
         padding: 60px 40px;
     }
 
+    .welcome__logo {
+        margin-bottom: 40px;
+    }
+
     .welcome__logo-image {
         width: 220px;
-        margin-bottom: 40px;
     }
 
     .welcome__title {
